Google_Kubernetes_Engine/traefik_ingress_controller/09_echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: echo1.arthurbdiniz.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.arthurbdiniz.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
