Google_Kubernetes_Engine/traefik_ingress_controller/10_traefik-dashboard-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.arthurbdiniz.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-controller
          servicePort: admin
